test/error/ast/NotIntInDivOrMod.mod
MODULE NotIntInDivOrMod;
VAR a: REAL; b: REAL; i: INTEGER;
BEGIN
  i := a DIV b;
END NotIntInDivOrMod.
